[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/crazy-cars-wario.png" type="Texture" id=1]
[ext_resource path="res://scripts/microgames/entities/00_01_CrazyCarsWario.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/sfx/wario_jump_0.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/sfx/wario_death_0.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/util/AudioSpeedController.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 62, 0, 31, 39 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 93, 0, 31, 39 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 124, 0, 31, 39 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 31, 39 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 31, 0, 31, 39 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 155, 0, 31, 39 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 186, 0, 31, 39 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "jumping",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "jumped",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 4, 2.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5.5, 12.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5, 5.5 )

[node name="CrazyCarsWario" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
frame = 2
playing = true
offset = Vector2( -3, -19.5 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 11 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 256

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -1.5, -16.5 )
shape = SubResource( 12 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -5.5 )
shape = SubResource( 13 )

[node name="Sounds" type="Node" parent="."]

[node name="JumpSound" parent="Sounds" instance=ExtResource( 5 )]
stream = ExtResource( 3 )
bus = "Microgame-SFX"

[node name="DeathSound" parent="Sounds" instance=ExtResource( 5 )]
stream = ExtResource( 4 )
bus = "Microgame-SFX"
